--- a/references/biblio.bib
+++ b/references/biblio.bib
@@ -274,7 +274,7 @@ langid = {english}
   langid = {british}
 }
 
-@jurisdiction{UnitedStatesAmerica,
+@misc{UnitedStatesAmerica,
   title = {United {{States}} of {{America}} vs {{PARK JIN HYOK}}}
 }
 
